# masa

./: README.md  requirements.txt
beamformphase/: CMakeLists.txt  package.xml
beamformphase/config/: beamform_config.yaml  rosjack_config.yaml
beamformphase/launch/: mvdr.launch  phase.launch  phase_parallel.launch  phasemix.launch  rosjack_read.launch  rosjack_ref.launch  rosjack_write.launch  rosjack_write_stereo.launch  rosjack_writewav.launch  rosjack_writewav_stereo.launch
beamformphase/src/: mvdr.cpp  phase.cpp  phase_parallel.cpp  phasemix.cpp  rosjack_write_stereo.cpp
demucs/: setup.cfg
demucs/demucs/: writewav.py
demucsmix/: package.xml  setup.cfg  setup.py
demucsmix/demucsmix/: demucsmix.py
demucsmix/denoiser/: demucs.py  enhance.py  solver.py
demucsmix/pretrained_model/: best.th
doa_plot/: package.xml  setup.cfg  setup.py
doa_plot/doa_plot/: doa_plot.py  qual_plot.py  theta_plot.py
doaoptimizer/: package.xml  setup.cfg  setup.py
doaoptimizer/doaoptimizer/: doaoptimizer.py  doaoptimizer_bc.py  doaoptimizer_brute.py  doaoptimizer_dummy.py  doaoptimizer_fb.py
freqselect/: package.xml  setup.cfg  setup.py
freqselect/config/: freqselect_config.yaml
freqselect/freqselect/: freqselect.py
freqselect/launch/: freqselect.launch
freqselect/pretrained_model/: knn_model_2s_power.pkl
jack_cmd/: CMakeLists.txt  package.xml
jack_control/: package.xml  setup.cfg  setup.py
jack_control/jack_control/: jack_control.py  jack_listdevices.py
jack_control/srv/: JACKcmd.srv
jack_msgs/: CMakeLists.txt
jack_msgs/srv/: BruteTheta.srv  SQA.srv
masacoord/: package.xml  setup.cfg  setup.py
masacoord/config/: Brute.yaml  DOACorrection.yaml  DOACorrectionMix.yaml  FrequencySelection.yaml  Linear.yaml  masacoord_config.yaml  masacoord_configmix.yaml  masacoord_configmono.yaml
masacoord/launch/: Brute.launch  DOACorrection.launch  DOACorrectionMix.launch  FrequencySelection.launch  Linear.launch  masacoord.launch  masacoordmix.launch  masacoordmono.launch
masacoord/masacoord/: masacoord.py  masacoord_brute.py
muse/: package.xml  setup.cfg  setup.py
muse/models/: MUSE_net.py  generator.py
muse/muse/: muse.py
muse/pretrained_model/: config.json  g_best
online_sqa/: setup.cfg  setup.py
online_sqa/online_sqa/: online_sqa.py  online_sqa_brute.py  online_sqa_exp.py
online_sqa/online_sqa/submodules/: scoreq.py
rosjack/include/rosjack/: rosjack.hpp
rosjack/src/: rosjack.cpp
soundloc/: CMakeLists.txt  package.xml
soundloc/config/: soundloc_config.yaml
soundloc/include/: multisoundloc.h
soundloc/launch/: soundloc.launch
soundloc/msg/: DOA.msg  Frequencies.msg
soundloc/src/: multisoundloc.cpp  soundloc_multi.cpp
