<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beamformphase</name>
  <version>0.0.0</version>
  <description>Phase-based frequency masking</description>
  <maintainer email="caleb.rascon@gmail.com">balkce</maintainer>
  <license>LGPL</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>jack_msgs</depend>
  <depend>rosjack</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
